[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/BattleMenuManager.gd" type="Script" id=1]
[ext_resource path="res://UI/BattleMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ScrollList.tscn" type="PackedScene" id=3]

[node name="BattleMenuManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BattleMenu" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="SubmenuPosition" type="Position2D" parent="BattleMenu"]
position = Vector2( 14, -4 )

[node name="MenuContainer" type="HBoxContainer" parent="BattleMenu/SubmenuPosition"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -44.0
margin_right = 238.0
grow_vertical = 0

[node name="ActionList" parent="BattleMenu/SubmenuPosition/MenuContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_right = 18.0
margin_bottom = 44.0

[node name="ItemList" parent="BattleMenu/SubmenuPosition/MenuContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_right = 18.0
margin_bottom = 44.0

[connection signal="menu_option_selected" from="BattleMenu" to="." method="_on_BattleMenu_menu_option_selected"]
[connection signal="resource_selected" from="BattleMenu/SubmenuPosition/MenuContainer/ActionList" to="." method="_on_ActionList_resource_selected"]
[connection signal="resource_selected" from="BattleMenu/SubmenuPosition/MenuContainer/ItemList" to="." method="_on_ItemList_resource_selected"]
